--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,14 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+
+  <input id="song_notes_1" name="song[notes][]" type="text"/>
+  <input id="song_notes_2" name="song[notes][]" type="text"/>
 
   <%= f.submit %>
-<% end %>
 
+
+<% end %>
 
